removing collections in favor of simpler roles

--- a/roles/node_setup/templates/otel-agent.service.j2
+++ b/roles/node_setup/templates/otel-agent.service.j2
@@ -8,6 +8,7 @@ WantedBy=multi-user.target
 
 [Service]
 Type=notify
-User=otel
+User=root
+Group=root
 Restart=always
 ExecStart=/usr/local/bin/otelcol-contrib --config /opt/otel-agent/otel-config.yaml
