--- a/roles/node_setup/templates/otel-agent.service.j2
+++ b/roles/node_setup/templates/otel-agent.service.j2
@@ -8,7 +8,7 @@ WantedBy=multi-user.target
 
 [Service]
 Type=notify
-User=root
+User=otel
 Group=root
 Restart=always
 ExecStart=/usr/local/bin/otelcol-contrib --config /opt/otel-agent/otel-config.yaml
