updating service type

--- a/roles/node_setup/templates/otel-agent.service.j2
+++ b/roles/node_setup/templates/otel-agent.service.j2
@@ -7,7 +7,7 @@ After=network.online.target
 WantedBy=multi-user.target
 
 [Service]
-Type=notify
+Type=simple
 User=otel
 Group=root
 Restart=always
